cluster/apps/pihole/deprecated/pihole-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-http-ingressroute
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.${SECRET_DIGITALOCEAN_DOMAIN_02}`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: pihole-middleware-redirect-scheme
      services:
        - name: pihole-tcp
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-https-ingressroute
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.${SECRET_DIGITALOCEAN_DOMAIN_02}`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        #- name: pihole-middleware-basicauth
        - name: pihole-middleware-headers
      services:
        - name: pihole-tcp
          port: 80
  tls:
    secretName: pihole-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole-middleware-redirect-scheme
  namespace: pihole
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole-middleware-basicauth
  namespace: pihole
spec:
  basicAuth:
    secret: pihole-secret-basicauth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole-middleware-headers
  namespace: pihole
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 63072000
    #customRequestHeaders:
      #X-Frame-Options: "SAMEORIGIN"
    #customFrameOptionsValue: "SAMEORIGIN"
    #contentSecurityPolicy: "frame-ancestors 'self' pihole.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    #contentSecurityPolicy: "default-src 'self'; script-src https://pihole.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      #- "https://*.${SECRET_DIGITALOCEAN_DOMAIN_02}"
      - "https://pihole.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
